# celery-tester

./: app.py  containers_compose.yaml  db_config.py  dockerfile  dockerignore  pyproject.toml
main_content/: app.py
main_content/templates/: main_form.html
