[tool.poetry]
name = "celery-tester"
version = "0.1.0"
description = ""
authors = ["Adrian Ginalski <adrian.ginalski@comarch.com>"]
readme = "README.md"
packages = [{include = "celery_tester"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
