[tool.poetry]
name = "celery-tester"
version = "0.1.0"
description = ""
authors = ["Adrian Ginalski <adrian.ginalski@comarch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
